# agent_observability

./: README.md  demo_run.py  pyproject.toml
demo_output/: events.jsonl  patch.diff
otel_runs/: demo.jsonl
src/agent_observability/: __init__.py  events.py  jsonl.py  tracing.py  watchdog.py
src/agent_observability/cli/: replay.py
src/agent_observability/exporters/: otlp.py
src/agent_observability/integrations/: __init__.py  llm.py  subprocess_backend.py
tests/: test_smoke.py
